--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -3,10 +3,13 @@
 <hr>
 
 <ul class="list-group">
-  <li class="list-group-item" routerLink="home" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true}">
-    Home page
+  <li class="list-group-item" routerLink="countries/by-capital" routerLinkActive="active">
+    Por capital
   </li>
-  <li class="list-group-item" routerLink="about" routerLinkActive="active">
-    About page
+  <li class="list-group-item" routerLink="countries/by-country" routerLinkActive="active">
+    Por país
+  </li>
+  <li class="list-group-item" routerLink="countries/by-region" routerLinkActive="active">
+    Por regíon
   </li>
 </ul>
