--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -6,13 +6,15 @@
 
 <div class="row">
   <div class="col">
-    <app-search-box [placeholder]="'Buscar por capital'" (onValueEvent)="searchByCapital($event)"></app-search-box>
+    <app-search-box [placeholder]="'Buscar por capital'" (onValueEvent)="searchByCapital($event)"
+      (onDebounceEvent)="searchByCapital($event)" [initialValue]="initialValue"></app-search-box>
   </div>
 </div>
 
 <div class="row">
   <div class="col">
     <hr>
+    <app-loading *ngIf="isLoading"></app-loading>
     <app-country-table [countries]="countries"></app-country-table>
   </div>
 </div>
