--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -6,7 +6,8 @@
 
 <div class="row">
   <div class="col">
-    <app-search-box [placeholder]="'Buscar por país'" (onValueEvent)="searchByCountry($event)"></app-search-box>
+    <app-search-box [placeholder]="'Buscar por país'" (onValueEvent)="searchByCountry($event)"
+      (onDebounceEvent)="searchByCountry($event)" [initialValue]="initialValue"></app-search-box>
   </div>
 </div>
 
