--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -5,8 +5,13 @@
 
 
 <div class="row">
-  <div class="col">
-    <app-search-box [placeholder]="'Buscar por región'" (onValueEvent)="searchByRegion($event)"></app-search-box>
+  <div class="col text-center">
+    <!-- <app-search-box [placeholder]="'Buscar por región'" (onValueEvent)="searchByRegion($event)"
+      (onDebounceEvent)="searchByRegion($event)"></app-search-box> -->
+    <button *ngFor="let region of regions" class="btn mx-2" (click)="searchByRegion(region)"
+      [ngClass]="{ 'btn-outline-primary': selectedRegion === region }">
+      {{ region }}
+    </button>
   </div>
 </div>
 
