--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -1,8 +1,2 @@
-
-<input
-type="text"
-[placeholder]="placeholder"
-class="form-control"
-(keyup.enter)="emitValue(txtInput.value)"
-#txtInput
-/>
+<input type="text" [placeholder]="placeholder" class="form-control" (keyup.enter)="emitValue(txtInput.value)"
+  (keyup)="onKeyPress(txtInput.value)" [value]="initialValue" #txtInput />
